--- a/modelviewcontroller/src/main/resources/templates/tweets.html
+++ b/modelviewcontroller/src/main/resources/templates/tweets.html
@@ -15,6 +15,7 @@
         <thead>
         <tr>
             <th class="left">ID</th>
+            <th class="left">Origin</th>
             <th class="left">Text</th>
             <th class="left">Username</th>
             <th class="left">Created</th>
