Update wavefront to sb3 version 1

--- a/modelviewcontroller/src/main/resources/templates/login.html
+++ b/modelviewcontroller/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="fragments/header.html :: header"></div>
+<div th:replace="~{fragments/header.html :: header}"></div>
 
 
 <div  style="margin-left : 1em; margin-right : auto ;" class="dox-wrapper">
