--- a/modelviewcontroller/src/main/resources/templates/tweets.html
+++ b/modelviewcontroller/src/main/resources/templates/tweets.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="fragments/header.html :: header"></div>
+<div th:replace="~{fragments/header.html :: header}"></div>
 
 <div style="margin-left : 1em; margin-right : 1em ;" class="container">
     <table class="table">
