--- a/modelviewcontroller/src/main/resources/templates/wordcloud.html
+++ b/modelviewcontroller/src/main/resources/templates/wordcloud.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div th:replace="fragments/header.html :: header"></div>
+<div th:replace="~{fragments/header.html :: header}"></div>
 
 <div id="react"></div>
 <script src="built/bundle.js"></script>
