--- a/modelviewcontroller/src/main/resources/templates/fragments/header.html
+++ b/modelviewcontroller/src/main/resources/templates/fragments/header.html
@@ -13,6 +13,7 @@
     <div class="header-nav">
         <a class="nav-link nav-text" th:href="@{/}">Wordcloud</a>
         <a class="nav-link nav-text" th:href="@{/tweets}">Tweets</a>
+        <a class="nav-link nav-text" th:href="@{/aisearch}">AI Search</a>
     </div>
 
     <div sec:authorize="isAuthenticated()" class="header-actions">
